--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>React App</title>
+  <title>SocialFeed</title>
 </head>
 
 <body>
